@@ -1,8 +1,9 @@
-import socket, sys
 from pysnmp.entity import engine, config
 from pysnmp.entity.rfc3413 import cmdgen
 from pysnmp.entity.rfc3413.oneliner.mibvar import MibVariable
-from pysnmp.carrier.asynsock.dgram import udp, udp6, unix
+from pysnmp.entity.rfc3413.oneliner.auth import CommunityData, UsmUserData
+from pysnmp.entity.rfc3413.oneliner.target import UdpTransportTarget, \
+    Udp6TransportTarget, UnixTransportTarget 
 from pysnmp.proto import rfc1905, errind
 from pysnmp.smi import view
 from pysnmp import nextid, error
@@ -23,167 +24,6 @@ usmAesCfb256Protocol = config.usmAesCfb256Protocol
 usmNoPrivProtocol = config.usmNoPrivProtocol
 
 nextID = nextid.Integer(0xffffffff)
-
-class CommunityData:
-    mpModel = 1 # Default is SMIv2
-    securityModel = mpModel + 1
-    securityLevel = 'noAuthNoPriv'
-    contextName = null
-    tag = null
-    def __init__(self, securityName, communityName=None, mpModel=None,
-                 contextEngineId=None, contextName=None, tag=None):
-        self.securityName = securityName
-        self.communityName = communityName
-        if mpModel is not None:
-            self.mpModel = mpModel
-            self.securityModel = mpModel + 1
-        self.contextEngineId = contextEngineId
-        if contextName is not None:
-            self.contextName = contextName
-        if tag is not None:
-            self.tag = tag
-        # Autogenerate securityName if not specified
-        if communityName is None:
-            self.communityName = securityName
-            self.securityName = 's%s' % hash(
-                ( securityName, self.mpModel,
-                  self.contextEngineId, self.contextName, self.tag )
-                )
-            
-    def __repr__(self):
-        return '%s("%s", <COMMUNITY>, %r, %r, %r, %r)' % (
-            self.__class__.__name__,
-            self.securityName,
-            self.mpModel,
-            self.contextEngineId,
-            self.contextName,
-            self.tag
-            )
-
-    def __hash__(self): return hash(self.securityName)
-
-    def __eq__(self, other): return self.securityName == other
-    def __ne__(self, other): return self.securityName != other
-    def __lt__(self, other): return self.securityName < other
-    def __le__(self, other): return self.securityName <= other
-    def __gt__(self, other): return self.securityName > other
-    def __ge__(self, other): return self.securityName >= other
-
-class UsmUserData:
-    authKey = privKey = None
-    authProtocol = usmNoAuthProtocol
-    privProtocol = usmNoPrivProtocol
-    securityLevel = 'noAuthNoPriv'
-    securityModel = 3
-    mpModel = 3
-    contextName = null
-    def __init__(self, securityName,
-                 authKey=None, privKey=None,
-                 authProtocol=None, privProtocol=None,
-                 contextEngineId=None, contextName=None):
-        self.securityName = securityName
-        
-        if authKey is not None:
-            self.authKey = authKey
-            if authProtocol is None:
-                self.authProtocol = usmHMACMD5AuthProtocol
-            else:
-                self.authProtocol = authProtocol
-            if self.securityLevel != 'authPriv':
-                self.securityLevel = 'authNoPriv'
-
-        if privKey is not None:
-            self.privKey = privKey
-            if self.authProtocol == usmNoAuthProtocol:
-                raise error.PySnmpError('Privacy implies authenticity')
-            self.securityLevel = 'authPriv'
-            if privProtocol is None:
-                self.privProtocol = usmDESPrivProtocol
-            else:
-                self.privProtocol = privProtocol
-
-        self.contextEngineId = contextEngineId
-        if contextName is not None:
-            self.contextName = contextName
-        
-    def __repr__(self):
-        return '%s("%s", <AUTHKEY>, <PRIVKEY>, %r, %r, %r, %r)' % (
-            self.__class__.__name__,
-            self.securityName,
-            self.authProtocol,
-            self.privProtocol,
-            self.contextEngineId,
-            self.contextName
-            )
-
-    def __hash__(self): return hash(self.securityName)
-
-    def __eq__(self, other): return self.securityName == other
-    def __ne__(self, other): return self.securityName != other
-    def __lt__(self, other): return self.securityName < other
-    def __le__(self, other): return self.securityName <= other
-    def __gt__(self, other): return self.securityName > other
-    def __ge__(self, other): return self.securityName >= other
-
-class _AbstractTransportTarget:
-    transportDomain = protoTransport = None
-    def __init__(self, transportAddr, timeout=1, retries=5, tagList=null):
-        self.transportAddr = transportAddr
-        self.timeout = timeout
-        self.retries = retries
-        self.tagList = tagList
-
-    def __repr__(self): return '%s(%r, %r, %r, %r)' % (
-        self.__class__.__name__, self.transportAddr,
-        self.timeout, self.retries, self.tagList
-        )
-
-    def __hash__(self): return hash(self.transportAddr)
-    
-    def __eq__(self, other): return self.transportAddr == other
-    def __ne__(self, other): return self.transportAddr != other
-    def __lt__(self, other): return self.transportAddr < other
-    def __le__(self, other): return self.transportAddr <= other
-    def __gt__(self, other): return self.transportAddr > other
-    def __ge__(self, other): return self.transportAddr >= other
-    
-    def openClientMode(self):
-        self.transport = self.protoTransport().openClientMode()
-        return self.transport
- 
-class UdpTransportTarget(_AbstractTransportTarget):
-    transportDomain = udp.domainName
-    protoTransport = udp.UdpSocketTransport
-    def __init__(self, transportAddr, timeout=1, retries=5, tagList=null):
-        _AbstractTransportTarget.__init__(self, transportAddr, timeout,
-                                          retries, tagList)
-        try:
-            self.transportAddr = socket.getaddrinfo(transportAddr[0],
-                                                    transportAddr[1],
-                                                    socket.AF_INET,
-                                                    socket.SOCK_DGRAM,
-                                                    socket.IPPROTO_UDP)[0][4][:2]
-        except socket.gaierror:
-            raise error.PySnmpError('Bad IPv4/UDP transport address %s: %s' % ('@'.join([ str(x) for x in transportAddr ]), sys.exc_info()[1]))
-
-class Udp6TransportTarget(_AbstractTransportTarget):
-    transportDomain = udp6.domainName
-    protoTransport = udp6.Udp6SocketTransport
-    def __init__(self, transportAddr, timeout=1, retries=5, tagList=null):
-        _AbstractTransportTarget.__init__(self, transportAddr, timeout,
-                                          retries, tagList)
-        try:
-            self.transportAddr = socket.getaddrinfo(transportAddr[0],
-                                                    transportAddr[1],
-                                                    socket.AF_INET6,
-                                                    socket.SOCK_DGRAM,
-                                                    socket.IPPROTO_UDP)[0][4][:2]
-        except socket.gaierror:
-            raise error.PySnmpError('Bad IPv6/UDP transport address %s: %s' % ('@'.join([ str(x) for x in transportAddr ]), sys.exc_info()[1]))
-
-class UnixTransportTarget(_AbstractTransportTarget):
-    transportDomain = unix.domainName
-    protoTransport = unix.UnixSocketTransport
 
 class AsynCommandGenerator:
     _null = univ.Null('')
